# gh-action

./: Dockerfile  README.md  action.yml
.github/workflows/: test-action.yml  test.yml
scan/: Dockerfile  action.yml  args.py  github_actions_reporter.py  ossprey.py  pyproject.toml  scan.py  test_args.py  test_github_actions_reporter.py  test_sbom.py  test_scan.py  test_virtualenv.py  validate.py
scan/scan/: scan.py  test_scan.py
test/: test_gh_action.sh
