[tool.poetry]
name = "scan"
version = "0.1.0"
description = "Script to scan a given folder, create an SBOM and then submit to for malware scanning"
authors = ["dreadn0ught"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
